--- a/DuOSU/firefox/DuOSU/manifest.json
+++ b/DuOSU/firefox/DuOSU/manifest.json
@@ -1,20 +1,27 @@
 {
   "name": "DuOSU",
   "description": "Login through Duo Mobile in your browser with ease.",
-  "version": "1.1.0",
+  "version": "1.3.1",
   "manifest_version": 2,
   "permissions": [
     "storage", "https://*.duosecurity.com/"
   ],
   "browser_action": {
     "default_title": "DuOSU",
-    "default_popup": "popup/popup.html",
+    "default_popup": "popup.html",
     "default_icon": {
       "16": "/images/duo16.png",
       "32": "/images/duo32.png",
       "48": "/images/duo48.png",
       "128": "/images/duo128.png"
     }
+  },
+  "content_scripts": [{
+    "matches": ["https://*.duosecurity.com/frame/v4/auth/prompt*"],
+    "js": ["contentScript.js"]
+  }],
+  "background": {
+    "scripts": ["background.js"]
   },
   "icons": {
     "16": "/images/duo16.png",
