--- a/DuOSU/chrome/DuOSU/manifest.json
+++ b/DuOSU/chrome/DuOSU/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "DuOSU",
-  "description": "Login through Duo Mobile with ease.",
-  "version": "1.3.0",
+  "description": "Login through Duo Mobile in your browser.",
+  "version": "1.3.2",
   "manifest_version": 3,
   "permissions": [
     "storage"
