--- a/DuOSU/firefox/DuOSU/manifest.json
+++ b/DuOSU/firefox/DuOSU/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "DuOSU",
-  "description": "Login through Duo Mobile in your browser with ease.",
-  "version": "1.3.1",
+  "description": "Login through Duo Mobile in your browser.",
+  "version": "1.3.2",
   "manifest_version": 2,
   "permissions": [
     "storage", "https://*.duosecurity.com/"
