--- a/chrome/DuOSU/manifest.json
+++ b/chrome/DuOSU/manifest.json
@@ -1,16 +1,16 @@
 {
   "name": "DuOSU",
   "description": "Login through Duo Mobile in your browser.",
-  "version": "1.3.6",
-  "manifest_version": 2,
+  "version": "1.3.7",
+  "manifest_version": 3,
   "permissions": [
-    "storage", "https://*.duosecurity.com/"
+    "storage"
   ],
+  "host_permissions": ["https://*.duosecurity.com/*"],
   "background": {
-    "scripts": ["worker.js"]
+    "service_worker": "worker.js"
   },
-  "browser_action": {
-    "default_title": "DuOSU",
+  "action": {
     "default_popup": "popup.html",
     "default_icon": {
       "16": "/images/duo16.png",
