--- a/firefox/DuOSU/manifest.json
+++ b/firefox/DuOSU/manifest.json
@@ -1,16 +1,16 @@
 {
   "name": "DuOSU",
   "description": "Login through Duo Mobile in your browser.",
-  "version": "1.3.6",
-  "manifest_version": 3,
+  "version": "1.3.7",
+  "manifest_version": 2,
   "permissions": [
-    "storage"
+    "storage", "https://*.duosecurity.com/"
   ],
-  "host_permissions": ["https://*.duosecurity.com/*"],
   "background": {
-    "service_worker": "worker.js"
+    "scripts": ["worker.js"]
   },
-  "action": {
+  "browser_action": {
+    "default_title": "DuOSU",
     "default_popup": "popup.html",
     "default_icon": {
       "16": "/images/duo16.png",
