--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "DuOSU",
   "description": "Login through Duo Mobile in your browser.",
-  "version": "1.3.7",
+  "version": "1.3.8",
   "manifest_version": 3,
   "permissions": [
     "storage"
@@ -10,6 +10,12 @@
   "background": {
     "service_worker": "worker.js"
   },
+  "content_scripts": [
+    {
+      "matches": ["https://*.duosecurity.com/*"],
+      "js": ["content.js"]
+    }
+  ],
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
