--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "DuOSU",
+  "name": "Duochrome",
   "description": "Login through Duo Mobile in your browser.",
   "version": "1.3.8",
   "manifest_version": 3,
@@ -19,16 +19,16 @@
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
-      "16": "/images/duo16.png",
-      "32": "/images/duo32.png",
-      "48": "/images/duo48.png",
-      "128": "/images/duo128.png"
+      "16": "/images/16.png",
+      "32": "/images/32.png",
+      "48": "/images/48.png",
+      "128": "/images/128.png"
     }
   },
   "icons": {
-    "16": "/images/duo16.png",
-    "32": "/images/duo32.png",
-    "48": "/images/duo48.png",
-    "128": "/images/duo128.png"
+    "16": "/images/16.png",
+    "32": "/images/32.png",
+    "48": "/images/48.png",
+    "128": "/images/128.png"
   }
 }
