--- a/firefox/manifest.json
+++ b/firefox/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "DuOSU",
+  "name": "Duochrome",
   "description": "Login through Duo Mobile in your browser.",
-  "version": "1.3.7",
+  "version": "1.4.0",
   "manifest_version": 2,
   "permissions": [
     "storage", "https://*.duosecurity.com/"
@@ -10,19 +10,19 @@
     "scripts": ["worker.js"]
   },
   "browser_action": {
-    "default_title": "DuOSU",
+    "default_title": "Duochrome",
     "default_popup": "popup.html",
     "default_icon": {
-      "16": "/images/duo16.png",
-      "32": "/images/duo32.png",
-      "48": "/images/duo48.png",
-      "128": "/images/duo128.png"
+      "16": "/images/16.png",
+      "32": "/images/32.png",
+      "48": "/images/48.png",
+      "128": "/images/128.png"
     }
   },
   "icons": {
-    "16": "/images/duo16.png",
-    "32": "/images/duo32.png",
-    "48": "/images/duo48.png",
-    "128": "/images/duo128.png"
+    "16": "/images/16.png",
+    "32": "/images/32.png",
+    "48": "/images/48.png",
+    "128": "/images/128.png"
   }
 }
