--- a/firefox/manifest.json
+++ b/firefox/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Duochrome",
   "description": "Login through Duo Mobile in your browser.",
-  "version": "1.4.0",
+  "version": "1.3.8",
   "manifest_version": 2,
   "permissions": [
     "storage", "https://*.duosecurity.com/"
@@ -9,6 +9,12 @@
   "background": {
     "scripts": ["worker.js"]
   },
+  "content_scripts": [
+    {
+      "matches": ["https://*.duosecurity.com/*"],
+      "js": ["content.js"]
+    }
+  ],
   "browser_action": {
     "default_title": "Duochrome",
     "default_popup": "popup.html",
