--- a/firefox/manifest.json
+++ b/firefox/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Duochrome",
+  "name": "Auto 2FA",
   "description": "Login through Duo Mobile in your browser.",
-  "version": "1.4.0.1",
+  "version": "1.4.1",
   "manifest_version": 2,
   "permissions": [
     "storage", "https://*.duosecurity.com/"
@@ -16,7 +16,7 @@
     }
   ],
   "browser_action": {
-    "default_title": "Duochrome",
+    "default_title": "Auto 2FA",
     "default_popup": "popup.html",
     "default_icon": {
       "16": "/images/16.png",
