--- a/firefox/manifest.json
+++ b/firefox/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Auto 2FA",
   "description": "Login through Duo Mobile in your browser.",
-  "version": "1.4.1",
+  "version": "1.4.2",
   "manifest_version": 2,
   "permissions": [
     "storage", "https://*.duosecurity.com/"
@@ -12,7 +12,11 @@
   "content_scripts": [
     {
       "matches": ["https://*.duosecurity.com/*"],
-      "js": ["content.js"]
+      "js": ["scan_script.js"]
+    },
+    {
+      "matches": ["https://*.duosecurity.com/frame/*/auth/prompt*"],
+      "js": ["login_script.js"]
     }
   ],
   "browser_action": {
