--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -23,16 +23,16 @@
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
-      "16": "/images/16.png",
-      "32": "/images/32.png",
-      "48": "/images/48.png",
-      "128": "/images/128.png"
+      "16": "/images/logo_16.png",
+      "32": "/images/logo_32.png",
+      "48": "/images/logo_48.png",
+      "128": "/images/logo_128.png"
     }
   },
   "icons": {
-    "16": "/images/16.png",
-    "32": "/images/32.png",
-    "48": "/images/48.png",
-    "128": "/images/128.png"
+    "16": "/images/logo_16.png",
+    "32": "/images/logo_32.png",
+    "48": "/images/logo_48.png",
+    "128": "/images/logo_128.png"
   }
 }
