--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,10 +7,28 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Create a Release
-      uses: elgohr/Github-Release-Action@v5
-      env:
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        title: MyReleaseMessage
+      - uses: actions/checkout@v3
+      - name: Set up node
+        uses: actions/setup-node@v4
+      - name: Install dependencies
+        run: npm ci
+      - name: Build chrome
+        run: |
+          npm run build
+          mkdir -p dist
+          zip -r dist/chrome.zip .output/chrome-mv3
+      - name: Build firefox
+        run: |
+          npm run build:firefox
+          mkdir -p dist
+          zip -r dist/firefox.zip .output/firefox-mv2
+      - name: Release
+        uses: softprops/action-gh-release@v2
+        with:
+          draft: true
+          generate_release_notes: true
+          files: |
+            dist/chrome.zip
+            dist/firefox.zip
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
